--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,6 +5,10 @@
     display: none;
 }
 
+body{
+    margin: 0;
+}
+
 .grid-container{
     display: grid;
     grid-template-columns: 1fr;
@@ -56,6 +60,9 @@ body div header nav{
 
 /* index.html */
 
+#headline{
+    background-color: grey;
+}
 
 /* about.html */
 
