--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -18,6 +18,42 @@ body{
 
 header{
     grid-area: header;
+    width: 100%;
+}
+
+header nav{
+    display: flex;
+    flex-direction: column;
+    text-decoration: none;
+    padding: 10px;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    width: 100%;
+}
+
+header nav a{
+    width: 55px;
+    list-style: none;
+    text-decoration: none;
+    padding: 5px;
+    color: #000;
+}
+
+.logobilde{
+    width: 75px;
+    height: 75px;
+}
+
+#contact-btn{
+    text-decoration: none;
+    list-style: none;
+    text-align: center;
+    height: 20px;
+    width: 55px;
+    padding: 10px;
+    background-color: #e6bd43;
+    font-weight: bold;
 }
 
 main{
@@ -38,7 +74,13 @@ footer{
 
 #bottom-banner{
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+}
+
+#bottom-banner ul{
+    padding: 0;
 }
 
 body div header nav{
@@ -50,6 +92,7 @@ body div header nav{
     color: #fff;
     text-decoration: none;
     font-size: xx-large;
+    padding: 10px;
 }
 
 .social-media-icons:visited{
@@ -61,7 +104,127 @@ body div header nav{
 /* index.html */
 
 #headline{
-    background-color: grey;
+    display: flex;
+    background-color: #a8a8a8;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 30px;
+}
+
+#headline h1{
+    width: 300px;
+    text-align: center;
+    height: 20px;
+    font-size: xx-large;
+}
+
+#headline p{
+    text-align: center;
+    max-width: 600px;
+}
+
+#index-subheading{
+    text-align: center;
+    padding: 60px 30px;
+}
+
+#index-subheading h3{
+}
+
+#read-more-about-our-services-btn{
+    background-color: #e6bd43;
+    padding: 10px;
+    color: #000;
+    list-style: none;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+#about-our-company{
+    display: flex;
+    flex-direction: column;
+    background-color: #e6bd43;
+    align-items: center;
+}
+
+#about-our-company section{
+    align-items: center;
+}
+
+#about-our-company img{
+    max-width: 250px;
+    padding: 50px 0 0 0;
+}
+
+#about-our-company p{
+    max-width: 360px;
+    text-align: center;
+    padding: 10px 50px;;
+}
+
+#read-more-about-us-btn{
+    color: #000;
+    text-decoration: none;
+    font-weight: bold;
+    border-style: solid;
+    border-color: #000;
+    padding: 15px;
+    margin: 20px 20px 70px 20px;
+}
+
+#our-services{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#our-services h3{
+    font-size: x-large;
+    margin: 40px 0;
+}
+
+#our-services article{
+    text-align: center;
+    max-width: 300px;
+    font-size: large;
+    margin: 30px;
+}
+
+#our-services article i{
+    font-size: xx-large;
+}
+
+#our-services article h4{
+    font-size: x-large;
+}
+
+#newsletter{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background-color: rgb(189, 188, 188);
+    padding: 30px 0 40px 0;
+}
+
+#newsletter h3{
+    max-width: 300px;
+    font-size: x-large;
+}
+
+#newsletter-signup{
+    height: 40px;
+    border: none;
+    padding: 0;
+}
+
+#sign-me-up-btn{
+    background-color: #e6bd43;
+    font-weight: bold;
+    height: 40px;
+    border: solid;
+    border-color: #e6bd43;
+    padding: 0;
 }
 
 /* about.html */
