--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -25,7 +25,7 @@ header nav{
     display: flex;
     flex-direction: column;
     text-decoration: none;
-    padding: 10px;
+    padding: 10px 0 0 0;
     justify-content: center;
     text-align: center;
     align-items: center;
@@ -36,7 +36,8 @@ header nav a{
     width: 55px;
     list-style: none;
     text-decoration: none;
-    padding: 5px;
+    margin: 5px;
+    padding: 10px;
     color: #000;
 }
 
@@ -81,11 +82,6 @@ footer{
 
 #bottom-banner ul{
     padding: 0;
-}
-
-body div header nav{
-    display: flex;
-    justify-content: space-between;
 }
 
 .social-media-icons{
@@ -235,6 +231,51 @@ body div header nav{
 }
 
 /* portfolio.html */
+
+#portfolio-heading{
+    display: flex;
+    justify-content: center;
+    height: 400px;
+    width: 100%;
+}
+
+#portfolio-heading h1{
+    margin: auto;
+}
+
+#explore-previous-jobs-section{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+#explore-previous-jobs-h2{
+    border-bottom: solid;
+    border-bottom-color:#e6bd43;
+    width: 300px;
+}
+
+#explore-previous-jobs-section ul{
+    margin: 50px;
+    width: 100%;
+}
+
+#explore-previous-jobs-section ul li{
+    border: solid;
+    border-color: #000;
+    margin: 5px;
+    list-style: none;
+    height: 40px;
+    width: 130px;
+    text-align: center;
+    float: left;
+}
+
+#explore-previous-jobs-section ul li a{
+    list-style: none;
+    text-decoration: none;
+    color: #000;
+}
 
 #branding-section article{
     max-width: 350px;
